feat: Added initial oauth2

--- a/.env.sample
+++ b/.env.sample
@@ -19,6 +19,17 @@ PGADMIN_CONFIG_SERVER_MODE=False
 # Frontend Configuration
 VITE_API_URL=http://localhost:8000
 
+# OAuth 2.0 Configuration
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+OAUTH_REDIRECT_URI=http://localhost:8000/api/auth/callback/google
+
+# JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-minimum-32-characters-for-security
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=30
+
 # Development Settings
 COMPOSE_PROJECT_NAME=the_agents
 
