--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -51,6 +51,17 @@ MAX_PAGE_SIZE=100
 # AWS_REGION=us-east-1
 # AWS_S3_BUCKET=your-bucket-name
 
+# OAuth 2.0 Configuration
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+OAUTH_REDIRECT_URI=http://localhost:8000/api/auth/callback/google
+
+# JWT Token Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-minimum-32-characters-for-security
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=15
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=30
+
 # pgAdmin Configuration (for Docker development)
 PGADMIN_DEFAULT_EMAIL=admin@yourdomain.com
 PGADMIN_DEFAULT_PASSWORD=your-secure-pgadmin-password
