--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -26,3 +26,7 @@ VITE_SHOW_DEBUG_INFO=false
 # Performance Settings
 VITE_API_TIMEOUT=30000
 VITE_MAX_UPLOAD_SIZE=10485760
+
+# OAuth 2.0 Configuration
+VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+VITE_OAUTH_REDIRECT_URI=http://localhost:8000/api/auth/callback/google
