--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,13 @@ wheels/
 *.egg
 MANIFEST
 
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+
 # PyInstaller
 *.manifest
 *.spec
@@ -195,3 +202,6 @@ uploads/
 
 # Docker
 .dockerignore
+
+.mypy_cache/
+.claude/
