--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,8 +8,9 @@ alembic==1.13.1
 pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.1.2
+python-dotenv==1.0.0
+authlib==1.2.1
+httpx==0.25.2
 python-multipart==0.0.6
 aiofiles==23.2.1
 celery==5.3.4
