--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,8 +52,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
