--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.84.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
